[gd_scene load_steps=3 format=3 uid="uid://ttx78yir5tt4"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_iswhu"]
[ext_resource type="FontFile" uid="uid://bs8qhqjs8jqq" path="res://menu/upheavtt.ttf" id="1_wcb0e"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iswhu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 638.0
offset_bottom = 359.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 28.0
offset_top = 68.0
offset_right = 606.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource("1_wcb0e")
theme_override_font_sizes/font_size = 34
text = "Escolha o tipo de controle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Joystick" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 35.0
offset_top = 163.0
offset_right = 249.0
offset_bottom = 207.0
theme_override_fonts/font = ExtResource("1_wcb0e")
theme_override_font_sizes/font_size = 40
text = "JOystick "

[node name="Teclado" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 282.0
offset_top = 163.0
offset_right = 632.0
offset_bottom = 207.0
theme_override_fonts/font = ExtResource("1_wcb0e")
theme_override_font_sizes/font_size = 40
text = "Teclado e Mouse"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 242.0
offset_right = 579.0
offset_bottom = 307.0
theme_override_fonts/font = ExtResource("1_wcb0e")
theme_override_font_sizes/font_size = 21
text = "Os dois modos de controle estão ativos ao mesmo tempo, para que você possa plugar e já jogar normalmente"
autowrap_mode = 3

[connection signal="pressed" from="Panel/Joystick" to="." method="_on_joystick_pressed"]
[connection signal="pressed" from="Panel/Teclado" to="." method="_on_teclado_pressed"]
